# hangman-multiplayer

./: CMakeLists.txt  README.md  client.py  requirements.txt  words.txt  words200.txt
server/: client.h  logic.c  logic.h  main  main.c  server.h
